# huffman-coding

./: .gitignore  LICENSE  README.md  file_text.txt  huffman_coding.py  pyproject.toml  test_huffman_coding.py
.github/workflows/: run-tests.yml
examples/client-server/: README.md  client.py  server.py
experiments/: buffering.py  combinations.py  dict_vs_list.py  mod_vs_shifts.py  out_of_memory_file.py  profiling.py  streams.py  unbuffered.py  window.py
huffman_coding/: __init__.py  src.py
tests/: test_huffman_coding.py
